KAFKA-19010: Added JVM argument to default configuration